core/nexus/stylesheets/_nexus_mixin.scss
//ref: @mixin css3-prefix($property, $value)
@mixin vendor_prefix($property, $value){
   -webkit-#{$property}: #{$value};
    -khtml-#{$property}: #{$value};
      -moz-#{$property}: #{$value};
       -ms-#{$property}: #{$value};
        -o-#{$property}: #{$value};
           #{$property}: #{$value};
}

@mixin border-radius($radius){
  @include vendor_prefix(border-radius,$radius);
}

@mixin word-break($word-break){
  -ms-word-break:$word-break;
  word-break:$word-break;
}

@mixin box-sizing($box-sizing){
  -webkit-box-sizing:$box-sizing;
  -moz-box-sizing:$box-sizing;
  box-sizing:$box-sizing;
}

@mixin box-shadow($box-shadow){
  -o-box-shadow: $box-shadow;
  -ms-box-shadow: $box-shadow;
  -moz-box-shadow: $box-shadow;
  -khtml-box-shadow: $box-shadow;
  -webkit-box-shadow: $box-shadow;
  box-shadow: $box-shadow;
}

@mixin transition($transition){
  -webkit-transition: $transition;
  -moz-transition: $transition;
  -o-transition: $transition;
  transition: $transition;
}

@mixin transform($transform){
  -webkit-transform: $transform;
  -ms-transform: $transform;
  transform: $transform;
}

@mixin appearance($appearance){
  -webkit-appearance:$appearance;
   -moz-appearance:$appearance;
   appearance:$appearance;
}

/* ref: http://codepen.io/ebellempire/pen/rnvEK*/
@mixin blur($blur){
  filter: blur($blur);
  -webkit-filter: blur($blur);
  -moz-filter: blur($blur);
  -o-filter: blur($blur);
  -ms-filter: blur($blur);
  filter: url(#blur); /* Firefox needs SVG */
  filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius=selector-replace($blur,'px',''));
}


@mixin animation($animation) {
    -moz-animation: $animation;
    -o-animation: $animation;
    -webkit-animation: $animation;
    animation: $animation;
}

@mixin text-overflow($text-overflow){
  -ms-text-overflow: $text-overflow;
  -o-text-overflow: $text-overflow;
  text-overflow: $text-overflow;

}

@mixin user-select($user-select){
    -webkit-user-select: $user-select;
    -moz-user-select: $user-select;
    -ms-user-select: $user-select;
    user-select: $user-select;
}

@mixin hyphens($hyphens){
  -webkit-hyphens: $hyphens;
  -moz-hyphens: $hyphens;
  -ms-hyphens: $hyphens;
  hyphens: $hyphens;
}

@mixin word-break($word-break){
  /*ref: https://css-tricks.com/almanac/properties/h/hyphenate/*/
  -ms-word-break: $word-break;
  word-break: $word-break;
  @if($word-break == break-all){
    word-break: break-word;
    @include hyphens(auto);
  }
}

@mixin ie8only($property,$value){
    @media \0screen\,screen\9 {
        $property:$value;
    }
}

// @mixin gradient($style, $origin, $color_1, $color_1_ratio, $color_2, $color_2_ratio){
//   // //fallback
//   // background: $color_1; //inbetween color $color_1 and $color_2; /* Old browsers */
//   // @if $style == radial{
//   //
//   // }
//   // @else{
//   //   $style: linear;
//   // }
//   //
//   // background: -moz-radial-gradient($origin, ellipse cover,  rgba(230,230,230,1) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
//   // background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(230,230,230,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
//   // background: -webkit-radial-gradient(center, ellipse cover,  rgba(230,230,230,1) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
//   // background: -o-radial-gradient(center, ellipse cover,  rgba(230,230,230,1) 0%,rgba(255,255,255,1) 100%); /* Opera 12+ */
//   // background: -ms-radial-gradient(center, ellipse cover,  rgba(230,230,230,1) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
//   // background: radial-gradient(ellipse at center,  rgba(230,230,230,1) 0%,rgba(255,255,255,1) 100%); /* W3C */
//   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6e6e6', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
//
//
//
// }

